<resources>
    <string name="app_name">Shortest Substring</string>
    <string name="summary_body">Given a string comprised of lowercase letters in the range ascii[a-z], determine the length of the smallest substring that contains all of the letters present in the string.\n\nFor example, given the string s = dabbcabcd, the list of all characters in the string is [a, b, c, d]. Two of the substrings that contain all letters are dabbc and abcd. The shortest substring containing all the letters is 4 characters long, abcd.</string>
    <string name="summary_title">Summary</string>
    <string name="function_description_title">Function Description</string>
    <string name="function_description_body">Complete the function shortestSubstring in the editor below. The function must return the length of the shortest substring that contains all of the characters within s.\n\nshortestSubstring has the following parameter:\n\ts: a string</string>
    <string name="constraints_title">Constraints</string>
    <string name="constraints_body"> - 1 ≤ size of s ≤ 10⁵\n- s[i] ∈ ascii[\'a\'-\'z\']</string>
    <string name="enter_parameter_string">Enter parameter string</string>
    <string name="find">Find</string>
</resources>
